# MUDShow

./: .gitignore  .npmrc  AGENTS.md  LICENSE  LINUX_PLAN.md  PLAN_AUTOUPGRADE.md  PLAN_CAPTURE.md  PLAN_FONTPICKER.md  PLAN_FONTS.md  PLAN_HISTORY.md  PLAN_LINKS.md  PLAN_LINUX.md  PLAN_LOGGING.md  PLAN_RULES.md  PLAN_SPELLING.md  PLAN_TRIGGERS.md  README.md  SPEC.md  SVELTE_PLAN.md  TAURI_CHECKLIST.md  TAURI_PLAN.md  VSCODE_SHARED_LAUNCH_NOTES.md  WISHLIST.md  mudshow.fish  mudshow.sh  package-lock.json  package.json  pnpm-lock.yaml  proxy.js  tinyserver.js  tsconfig.json  tsconfig.tsbuildinfo  vscode.launch.json.example
backend/: proxy.ts  telnet.ts  tsconfig.json
frontend/: app.css  index.html  vite.config.ts
scripts/: build-desktop.mjs  dev-desktop.mjs  tauri-dev.mjs
shared/: types.ts
tauri/: Cargo.toml  tauri.conf.json
tauri/capabilities/: default.json
tauri/permissions/: append-session-log.toml  connect-mud.toml  create-session-log.toml  default.toml  disconnect-mud.toml  get-app-storage-path.toml  get-default-log-folder.toml  list-system-fonts.toml  load-app-storage.toml  move-app-storage-file.toml  move-default-log-folder.toml  open-external-url.toml  path-exists.toml  pick-app-storage-file.toml  poll-mud.toml  rename-session-log.toml  resolve-default-log-folder.toml  reveal-app-storage-file.toml  reveal-default-log-folder.toml  reveal-session-log-file.toml  save-app-storage.toml  send-mud.toml  set-app-storage-path.toml  validate-system-font.toml  window-close.toml  window-minimize.toml  window-open-devtools.toml  window-request-attention.toml  window-start-dragging.toml  window-start-resize-dragging.toml  window-toggle-maximize.toml
tauri/src/: fonts.rs  main.rs  mud_backend.rs  storage.rs
(+96 files in other folders)
