[package]
name = "mudshow"
version = "1.0.0"
description = "MUDShow desktop shell"
authors = []
license = "ISC"
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
native-tls = "0.2"
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true
