[package]
name = "mudshow"
version = "1.0.0"
description = "MUDShow desktop shell"
authors = []
license = "ISC"
edition = "2021"
rust-version = "1.77.2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
devtools = []

[dependencies]
fontdb = "0.23"
native-tls = "0.2"
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
tauri-plugin-clipboard-manager = "2"
tauri-runtime = "2"
tokio = { version = "1", features = ["io-util", "macros", "net", "sync"] }
tokio-native-tls = "0.3"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true
